# Linux

Myshell/myShell_simple/: makefile  myShell  myShell_simple.c
Myshell/myShell_simple/testcmake/: CMakeLists.txt
Myshell/myShell_simple/testcmake/include/: myShell_simple.h
Myshell/myShell_simple/testcmake/src/: myShell_simple.c  print_Sub_command.c  saparate_Command.c
file_io/: a.out  file  file.c  file.cc  log1.txt  makefile
file_io/myio/: 2  Makefile  log.txt  main.c  mystdio  mystdio.c  mystdio.h
myshell/myShell_simple/: makefile  myShell  myShell_simple.c
myshell/myshell/: makefile  myshell  myshell.c
pipe/: main.cc  makefile  mypipe
pipe/namedpipe/: client.cc  component.hpp  makefile  server.cc
pipe/namedpipe/RTC/: client  client.cc  server  server.cc
pipe/processCtrl/: ctrl.hpp  ctrlprocess  main.cc  makefile  ouline.md
process/alone_proc/: Makefile  alone_proc  alone_process.c  loop.bash
process/defunct_proc/: Makefile  defunct_proc  defunct_process.c  loop.bash
shm/: client.cc  client1.cc  client2.cc  common.hpp  makefile  server.cc
shm/test/: client  client.cc  common.hpp  loop.bash  makefile  server  server.cc
